# ZJBrainSciencePlatformV2

./: .gitignore  Dockerfile  README.md  alembic.Dockerfile  alembic.ini  build.py  build.sh  build_base_image.sh  compose.sh  docker-compose.yaml  migration.sql  pyproject.toml  requirements.alembic.txt  requirements.txt
.github/workflows/: pytest.yaml  test-build-deploy.yaml
alembic/: env.py
alembic/sql/: 1.sql  e57a7b7fec35.sql  new.sql
alembic/versions/: 01b5380e17fc_create_tables.py  01b5380e17fc_human_subject_add_name.py  0380cb81acd2_添加回eegdatafile.py  041730ec910e_migrate_to_sqlalchemy.py  134d9c7fb6e0_添加eegdatafile_orm_文件.py  19f8815b6a7b_删除eegdatafile_orm.py  1ffdc2cfbf96_增加dataset字段.py  2047b43c9f26_add_experiment_description.py  22e421a98a7c_使species表拉丁名唯一.py  23c801a3fe36_rename_file_path_to_name.py  2481c8a86f7e_add_user_and_message.py  29d2c3c1dd20_update_device_relation.py  2c8d27d49fc1_add_indexes.py  2f68cf9ba0a2_delete_file_table.py  2f9377b8c88e_add_cumulative_data_per_month_and_.py  327fc41f4056_add_message_localization.py  40ace7f92d22_file_add_some_fields.py  469179963a6b_remove_user_account_type.py  46b22297d54e_去掉eegdata_file.py  486b19e5124b_alter_atlas_paradigm_class.py  4ac5fdfc5d03_new_from_sqlalchemy.py  565f0f7ad445_add_other_to_experiment_type.py  576fba37f0c3_new.py  5a840b6cfdfb_migrate_file_to_storage_file_and_.py  5bfa0d19bedd_add_table_human_subject_index.py  5d892999c6c1_修改dataset字段信息.py  5e514e211841_add_models.py  62708cc0b959_delete_column_file_index.py  62708cc0b959_merge_changes.py  6b9e69c519ca_delete_paradigmfile.py  6c54801bec54_add_species.py  7998b9bc1dfe_experiment_assistant.py  799d16d56de0_rename_notification_msg_type_to_type.py  864ccb4da84a_增加数据总量表.py  86c548e3656b_add_device_table.py  8d47b0117044_modified_dataset.py  8dc0f8fefc93_atlasregion_add_label.py  8dc0f8fefc93_merge_20230925.py  8df725131837_删除eegdatafile_表.py  8ed9dce7fe68_move_user_is_super_user_to_access_level.py  (+30 more)
app/: config.py  crud.py  database.py  log.py  main.py  message.py  models.py  request.py  requests.py  response.py  responses.py  schemas.py  time.py  timezone_util.py  user.py  util.py  utils.py
app/api/: __init__.py  algorithm.py  atlas.py  auth.py  dataset.py  device.py  eegdata.py  experiment.py  file.py  human_subject.py  message.py  notification.py  paradigm.py  species.py  task.py  user.py
app/common/: config.py  context.py  depend.py  exception.py  file_config.py  localization.py  log.py  message_location.py  schedule.py  time.py  user_auth.py  util.py
app/db/: __init__.py  cache.py  common_crud.py  crud.py  database.py  orm.py
app/grpc/: eeg_pb2.py  eeg_pb2.pyi  eeg_pb2_grpc.py
app/model/: convert.py  db_model.py  enum_filed.py  field.py  models.py  request.py  requests.py  response.py  responses.py  schema.py  schema_field.py  schemas.py
config/: entity_localization.yaml  message_localization.yaml
deploy/compose/: cache.compose.yaml  database.compose.yaml  dev.compose.yaml  file-server.compose.yaml  platform.compose.yaml
deploy/config/: ATLAS.config.sh  PRODUCTION.config.sh  TESTING.config.sh  config.sh
deploy/image-version/: base.version  (+2 more)
deploy_config/: config.sh  config_PRODUCTION.sh  config_TESTING.sh
dockerfile/: alembic.Dockerfile  backend.Dockerfile  base.Dockerfile  database.Dockerfile  platform.Dockerfile
script/: build_and_run.sh  build_base_image.sh  clear.sh  run_alembic.sh
scripts/: aes_password.py
test/: __init__.py  conftest.py  test_atlas.py  test_auth.py  test_message_localization.py  test_user.py
(+89 files in other folders)
