[tool.poetry]
name = "ZJBrainSciencePlatform"
version = "0.1.0"
description = "之江实验室 Brain Science 平台"
authors = ["蔡涛 <caitao@zhejianglab.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
sqlalchemy = { extras = ["pymysql"], version = "^2.0.17" }
pydantic = "^1.10.11"
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-jose = "^3.3.0"
python-multipart = "^0.0.5"
starlette = "^0.27.0"
uvicorn = "^0.20.0"
python-dateutil = "^2.8.2"
redis = { extras = ["hiredis"], version = "^4.4.0" }
requests = "^2.28.2"
pyyaml = "^6.0"

[tool.poetry.group.alembic.dependencies]
alembic = "^1.9.0"
mysqlclient = "^2.1.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
ipython = "^8.7.0"
rich = "^13.3.2"
setuptools = "^67.6.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.2.1"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py311"]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["app", "alembic", "test"]
